--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Zie ook veel meer op onze website http://nlextract.nl
+
 Nederlandse overheidsinstellingen zoals Het Kadaster en Rijkswaterstaat stellen
 hun (geo) data meer en meer beschikbaar als Open Data. Bijvoorbeeld de BAG
 (Basisregistratie Adressen en Gebouwen, www.kadaster.nl/BAG) levert je alle
