--- a/bag/README
+++ b/bag/README
@@ -50,7 +50,7 @@ Instellingen:
 	Configuratiebestand dat nodig is bij het uitvoeren van de programma's. 
 	Dit bestand bevat de volgende instellingen:
 	- database naam van de Postgres database
-	- schema   [optioneel] schemanaam  waar de tabellen worden aangemaakt (default "public")
+	- schema   [optioneel] schemanaam of schema search path waar de tabellen worden aangemaakt (default "public")
 	- host     host waar de Postgres database draait
 	- user     user voor toegang tot de Postgres database
 	- password password van de user voor toegang tot de Postgres database
@@ -82,15 +82,8 @@ Voorbeelden:
 
             -e werkt op directory, file of .zip inclusief mutatie-bestanden
 
-        3. Verrijken: genereren gemeente + provincie tabellen met geometrie uit woonplaatsen
-
-             python bagextract.py -v -q ../db/script/gemeente-provincie-tabel.sql
-
-			Met de -q (query) optie kan elk SQL bestand worden uitgevoerd
-
-        4. Verrijken: aanmaken tabel met volledige "ACN-achtige" adressen uit BAG + gemeente + provincie tabellen
+        3. Verrijken: aanmaken tabel met volledige "ACN-achtige" adressen uit BAG + gemeente + provincie tabellen
            (kan lang duren op gehele BAG, lijkt sneller te gaan via "psql" Postgres commando).
-           NB Doe altijd eerst stappen 1-3. !
 
              psql -d bag < ../db/script/adres-tabel.sql
 
@@ -99,7 +92,19 @@ Voorbeelden:
 			# set search_path to bag,public;
 			# \i /opt/nlextract/git/bag/db/script/adres-tabel.sql
 
- Issues:
+        4. Verrijken: genereren gemeente + provincie tabellen met geometrie uit woonplaatsen aggregeren
+            NB Doe altijd eerst stappen 1-3 anders blijft de tabel "gemeente" leeg. !
+
+             python bagextract.py -v -q ../db/script/gemeente-provincie-tabel.sql
+
+			Met de -q (query) optie kan elk SQL bestand worden uitgevoerd
+
+		5. Geocoding : zie tabellen en functies onder db/script/geocode
+		    De BAG is niet standaard geschikt om geocoding op uit te voeren.
+		    Daartoe dienen eerst afgeleide tabellen te worden aangemaakt
+		    en hulp functies voor met name "reverse geocoding" (vind adres
+		    voor x,y coordinaten).
+Issues:
 
         Het is mogelijk de hele BAG .zip levering in te lezen vanuit de "hoofd" zip, maar dit kan
         soms geheugen-problemen opleveren. De voorlopige oplossing is om de hoofdzip uit te pakken in een enkele
