--- a/bag/README
+++ b/bag/README
@@ -6,6 +6,7 @@ bag-extract biedt de volgende functionaliteiten:
  - Toepassen van Kadaster BAG mutaties vanuit Kadaster (.zip GML) levering
  - Verrijken BAG met gemeenten en provincies
  - Verrijken: tabel met volledige "ACN-achtige" adressen genereren
+ - Geocoderen: afgeleide tabellen en functies
  - Stijlen (SLDs) om de ingelezen BAG data te visualiseren via een WMS
  - Validatie van input vlak geometrie
  - Database VIEWs om bagobjecten te selecteren die actueel, bestaand en valide geometrie hebben
@@ -69,7 +70,7 @@ Voorbeelden:
 
             Alle commando's kunnen via Python of shell .sh script uitgevoerd vanaf elke directory.
 
-        1. Initialiseer de database en vul/verrijk met referentie-data (gemeenten/provincies) (-c):
+        1. Initialiseer de database en vul/verrijk met referentie-koppeldata (gemeenten/provincies) (-c):
 
             python bagextract.py -c
             of
@@ -82,8 +83,18 @@ Voorbeelden:
 
             -e werkt op directory, file of .zip inclusief mutatie-bestanden
 
-        3. Verrijken: aanmaken tabel met volledige "ACN-achtige" adressen uit BAG + gemeente + provincie tabellen
+
+        3. Verrijken: genereren gemeente + provincie tabellen met geometrie uit woonplaatsen aggregeren
+            NB Doe altijd eerst stappen 1-2 anders blijft de tabel "gemeente" leeg. !
+
+             python bagextract.py -v -q ../db/script/gemeente-provincie-tabel.sql
+
+			Met de -q (query) optie kan elk SQL bestand worden uitgevoerd
+
+
+        4. Verrijken: aanmaken tabel met volledige "ACN-achtige" adressen uit BAG + gemeente + provincie tabellen
            (kan lang duren op gehele BAG, lijkt sneller te gaan via "psql" Postgres commando).
+           NB Doe altijd eerst stappen 1-2, stap 3 is niet strict noodzakelijk.
 
              psql -d bag < ../db/script/adres-tabel.sql
 
@@ -91,13 +102,6 @@ Voorbeelden:
             als je de adres-tabel in een expliciet Postgres schema wilt. Bijv
 			# set search_path to bag,public;
 			# \i /opt/nlextract/git/bag/db/script/adres-tabel.sql
-
-        4. Verrijken: genereren gemeente + provincie tabellen met geometrie uit woonplaatsen aggregeren
-            NB Doe altijd eerst stappen 1-3 anders blijft de tabel "gemeente" leeg. !
-
-             python bagextract.py -v -q ../db/script/gemeente-provincie-tabel.sql
-
-			Met de -q (query) optie kan elk SQL bestand worden uitgevoerd
 
 		5. Geocoding : zie tabellen en functies onder db/script/geocode
 		    De BAG is niet standaard geschikt om geocoding op uit te voeren.
