--- a/bag/README
+++ b/bag/README
@@ -31,13 +31,17 @@ Afhankelijkheden:
    apt-get of yum install libxslt1.1
    apt-get of yum install python-lxml
 
+ - GDAL (www.gdal.org) met Python bindings voor OGR geometrie-parsing en geometrie-validatie (NLX v1.1.1 en hoger)
+   apt-get of yum install gdal-bin
+   apt-get of yum install python-gdal
+
  - installeer de PostgreSQL python bibliotheek psycopg2:
    sudo easy_install psycopg2
 
  - indien je niet Python 3.0 of hoger hebt installeer Python package "argparse", bijv
    sudo easy_install argparse
 
- - NB als je een proxy gebruikt via http_proxy  doe dan easy_install -E (exporteer huidge environment)
+ - NB als je een proxy gebruikt via http_proxy  doe dan easy_install -E (exporteer huidige environment)
 
 Commando:
  - direct via python "python src/bagextract.py"
