--- a/bag/README
+++ b/bag/README
@@ -1,5 +1,10 @@
-bag-extract is onderdeel van de NLExtract tools voor het inlezen en verrijken van Kadaster BAG GML leveringen
-in (voorlopig) een Postgres/Postgis database.
+bag-extract is onderdeel van de NLExtract tools voor het inlezen en verrijken van Kadaster BAG 
+(Basisregistratie Adressen en Gebouwen) GML leveringen in (voorlopig) een Postgres/Postgis database.
+
+De BAG Leveringsbestanden (totaal plm 1.2 GB .zip) worden iedere maand ververst en zijn te downloaden via deze  
+link: http://geodata.nationaalgeoregister.nl/inspireadressen/atom/inspireadressen.xml (Atom feed).
+Als je wilt testen met een kleiner bestand kun je via http://www.nlextract.nl/file-cabinet
+ook de "BAG Amstelveen" (5.6 MB) downloaden.
 
 bag-extract biedt de volgende functionaliteiten:
  - Laden van een Kadaster BAG Extract vanuit Kadaster (.zip GML) levering
