update Kadaster docs voor Top10NL, actueel is nu Top10NL  1.1.1

--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 Zie ook veel meer op onze website http://nlextract.nl
+Documentatie vind je op: http://nlextract.readthedocs.org
+
+Hieronder wat algemene informatie.
 
 Nederlandse overheidsinstellingen zoals Het Kadaster en Rijkswaterstaat stellen
 hun (geo) data meer en meer beschikbaar als Open Data. Bijvoorbeeld de BAG
